--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_GridComp_ExtData.yaml
@@ -15,21 +15,21 @@ Collections:
     template: ExtData/chemistry/CEDS/v2021-04-21/sfc/OC-em-anthro_CMIP_CEDS_gn_nonenergy.x2304_y1441_t12.%y4.nc4
   CA2G_OC-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4:
     template: ExtData/chemistry/CEDS/v2021-04-21/sfc/OC-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
-  CA2G_dR_MERRA-AA-r2.aer_Nv.2003_2014.2008clm.nc4:
-    template: ExtData/chemistry/MERRAero/v0.0.0/L72/dR_MERRA-AA-r2.aer_Nv.2003_2014.2008clm.nc4
-  CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4:
-    template: ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+  CA2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4:
+    template: ExtData/chemistry/MERRA2/v0.0.0/L72/merra2.aer_Nv.2003-2015.2008%m2clm.nc4
+  CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4:
+    template: ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
   CA2G_qfed2.emis_bc.006.%y4%m2%d2.nc4:
-    template: ExtData/chemistry/QFED/vNRT/sfc/0.1/Y%y4/M%m2/qfed2.emis_bc.006.%y4%m2%d2.nc4
+    template: ExtData/chemistry/QFED/v2.5r1-nrt/sfc/0.1/Y%y4/M%m2/qfed2.emis_bc.006.%y4%m2%d2.nc4
     valid_range: "2014-12-01T12:00/2021-11-01T12:00"
   CA2G_qfed2.emis_oc.006.%y4%m2%d2.nc4:
-    template: ExtData/chemistry/QFED/vNRT/sfc/0.1/Y%y4/M%m2/qfed2.emis_oc.006.%y4%m2%d2.nc4
+    template: ExtData/chemistry/QFED/v2.5r1-nrt/sfc/0.1/Y%y4/M%m2/qfed2.emis_oc.006.%y4%m2%d2.nc4
     valid_range: "2014-12-01T12:00/2021-11-01T12:00"
   CA2G_qfed2.emis_bc.061.%y4%m2%d2.nc4:
-    template: ExtData/chemistry/QFED/vNRT/sfc/0.1/Y%y4/M%m2/qfed2.emis_bc.061.%y4%m2%d2.nc4
+    template: ExtData/chemistry/QFED/v2.5r1-nrt/sfc/0.1/Y%y4/M%m2/qfed2.emis_bc.061.%y4%m2%d2.nc4
     valid_range: "2021-11-01T12:00/2025-01-01"
   CA2G_qfed2.emis_oc.061.%y4%m2%d2.nc4:
-    template: ExtData/chemistry/QFED/vNRT/sfc/0.1/Y%y4/M%m2/qfed2.emis_oc.061.%y4%m2%d2.nc4
+    template: ExtData/chemistry/QFED/v2.5r1-nrt/sfc/0.1/Y%y4/M%m2/qfed2.emis_oc.061.%y4%m2%d2.nc4
     valid_range: "2021-11-01T12:00/2025-01-01"
 
 Samplings:
@@ -186,11 +186,11 @@ Exports:
     sample: CA2G_sample_1
     variable: oc_shipping
   climBCDP001:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: BCDP001
   climBCDP002:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: BCDP002
   climBCSD001:
@@ -202,35 +202,35 @@ Exports:
     sample: CA2G_sample_0
     variable: BCSD002
   climBCSV001:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: BCSV001
   climBCSV002:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: BCSV002
   climBCWT001:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: BCWT001
   climBCWT002:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: BCWT002
   climBCphilic:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nv.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: BCphilic
   climBCphobic:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nv.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: BCphobic
   climOCDP001:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: OCDP001
   climOCDP002:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: OCDP002
   climOCSD001:
@@ -242,27 +242,27 @@ Exports:
     sample: CA2G_sample_0
     variable: OCSD002
   climOCSV001:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: OCSV001
   climOCSV002:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: OCSV002
   climOCWT001:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: OCWT001
   climOCWT002:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: OCWT002
   climOCphilic:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nv.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: OCphilic
   climOCphobic:
-    collection: CA2G_dR_MERRA-AA-r2.aer_Nv.2003_2014.2008clm.nc4
+    collection: CA2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: OCphobic
   pSOA_ANTHRO_VOC:
