--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_GridComp_ExtData.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_GridComp_ExtData.rc
@@ -5,35 +5,35 @@ PrimaryExports%%
 # -------------|-------|-------|--------|----------------------|--------|--------|-------------|----------|
 
 #===== Sulfate Data Instance ==========================================
-climSO4         'kg kg-1'     Y   N               0              0.0      1.0     SO4        ExtData/chemistry/MERRAero/v0.0.0/L72/dR_MERRA-AA-r2.aer_Nv.2003_2014.2008clm.nc4
+climSO4         'kg kg-1'     Y   N               0              0.0      1.0     SO4        ExtData/chemistry/MERRA2/v0.0.0/L72/merra2.aer_Nv.2003-2015.2008%m2clm.nc4
 #climDMS         'kg kg-1'     Y   N               -              0.0      1.0     none       /dev/null
 #climMSA         'kg kg-1'     Y   N               -              0.0      1.0     none       /dev/null
 #climSO2         'kg kg-1'     Y   N               -              0.0      1.0     none       /dev/null
 
-climSUDP001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP001    ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
-climSUWT001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT001    ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+climSUDP001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP001    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+climSUWT001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT001    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
 climSUSD001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSD001    /dev/null
-climSUSV001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV001    ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+climSUSV001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV001    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
 
-climSUDP002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP002    ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
-climSUWT002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT002    ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+climSUDP002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP002    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+climSUWT002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT002    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
 climSUSD002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSD002    /dev/null
-climSUSV002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV002    ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+climSUSV002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV002    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
 
-climSUDP003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP003    ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
-climSUWT003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT003    ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+climSUDP003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP003    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+climSUWT003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT003    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
 climSUSD003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSD003    /dev/null
-climSUSV003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV003    ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+climSUSV003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV003    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
 
-climSUDP004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP004    ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
-climSUWT004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT004    ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+climSUDP004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP004    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+climSUWT004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT004    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
 climSUSD004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSD004    /dev/null
-climSUSV004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV004    ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+climSUSV004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV004    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
 
 
 #====== Sulfate Sources =================================================
 # Biomass burning -- QFED-v2.x
-SU_BIOMASS NA  N Y %y4-%m2-%d2t12:00:00 none 0.778 biomass ExtData/chemistry/QFED/v2.5r1/sfc/0.1/Y%y4/M%m2/qfed2.emis_so2.006.%y4%m2%d2.nc4
+SU_BIOMASS NA  N Y %y4-%m2-%d2t12:00:00 none 0.778 biomass ExtData/chemistry/QFED/v2.6r1/sfc/0.1/Y%y4/M%m2/qfed2.emis_so2.061.%y4%m2%d2.nc4
 
 # Anthropogenic (BF & FF) emissions -- allowed to input as two layers
 SU_ANTHROL1 NA  N Y %y4-%m2-%d2t12:00:00 none none so2_nonenergy  ExtData/chemistry/CEDS/v2021-04-21/sfc/SO2-em-anthro_CMIP_CEDS_gn_nonenergy.x2304_y1441_t12.%y4.nc4
