--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_GridComp_ExtData.yaml
@@ -13,12 +13,12 @@ Collections:
     template: ExtData/chemistry/CEDS/v2021-04-21/sfc/SO2-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
   SU2G_SO4-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4:
     template: ExtData/chemistry/CEDS/v2021-04-21/sfc/SO4-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
-  SU2G_dR_MERRA-AA-r2.aer_Nv.2003_2014.2008clm.nc4:
-    template: ExtData/chemistry/MERRAero/v0.0.0/L72/dR_MERRA-AA-r2.aer_Nv.2003_2014.2008clm.nc4
-  SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4:
-    template: ExtData/chemistry/MERRAero/v0.0.0/sfc/dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
-  SU2G_qfed2.emis_so2.006.%y4%m2%d2.nc4:
-    template: ExtData/chemistry/QFED/v2.5r1/sfc/0.1/Y%y4/M%m2/qfed2.emis_so2.006.%y4%m2%d2.nc4
+  SU2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4:
+    template: ExtData/chemistry/MERRA2/v0.0.0/L72/merra2.aer_Nv.2003-2015.2008%m2clm.nc4
+  SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4:
+    template: ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+  SU2G_qfed2.emis_so2.061.%y4%m2%d2.nc4:
+    template: ExtData/chemistry/QFED/v2.6r1/sfc/0.1/Y%y4/M%m2/qfed2.emis_so2.061.%y4%m2%d2.nc4
     valid_range: "2000-02-29T12:00/2025-01-01"
   SU2G_hfed.emis_so2.x576_y361.%y4%m2.nc4:
     template: ExtData/chemistry/HFED/v1.0/Y%y4/M%m2/hfed.emis_so2.x576_y361.%y4%m2.nc4
@@ -70,7 +70,7 @@ Exports:
     variable: so2_aviation
   SU_BIOMASS:
     - {starting: "1960-01-16T12:00", collection: SU2G_hfed.emis_so2.x576_y361.%y4%m2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: SU2G_sample_1, variable: biomass}
-    - {starting: "2000-03-01T00:00", collection: SU2G_qfed2.emis_so2.006.%y4%m2%d2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: SU2G_sample_1, variable: biomass}
+    - {starting: "2000-03-01T00:00", collection: SU2G_qfed2.emis_so2.061.%y4%m2%d2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: SU2G_sample_1, variable: biomass}
   SU_DMSO:
     collection: SU2G_DMSclim_sfcconcentration.x360_y181_t12.Lana2011.nc4
     regrid: CONSERVE
@@ -102,23 +102,23 @@ Exports:
     sample: SU2G_sample_1
     variable: so4_shipping
   climSO4:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nv.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SO4
   climSUDP001:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SUDP001
   climSUDP002:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SUDP002
   climSUDP003:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SUDP003
   climSUDP004:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SUDP004
   climSUSD001:
@@ -138,35 +138,35 @@ Exports:
     sample: SU2G_sample_0
     variable: SUSD004
   climSUSV001:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SUSV001
   climSUSV002:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SUSV002
   climSUSV003:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SUSV003
   climSUSV004:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SUSV004
   climSUWT001:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SUWT001
   climSUWT002:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SUWT002
   climSUWT003:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SUWT003
   climSUWT004:
-    collection: SU2G_dR_MERRA-AA-r2.aer_Nx.2003_2014.2008clm.nc4
+    collection: SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
     variable: SUWT004
   pSO2_OCS:
